[gd_scene load_steps=2 format=3 uid="uid://yb8wore3as0d"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/categories/item_categories_item_list.gd" id="1_3hcv6"]

[node name="ItemCategoriesItemList" type="VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
script = ExtResource("1_3hcv6")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="SearchLineEdit" type="LineEdit" parent="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Search Item Categories Types"
draw_control_chars = true

[node name="SearchIcon" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 1

[node name="ItemList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
fixed_icon_size = Vector2i(16, 16)

[connection signal="text_changed" from="Control/SearchLineEdit" to="." method="_on_search_line_edit_text_changed" flags=18]
[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked" flags=18]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected" flags=18]
